--- a/Desbravadores-site/.env.dev
+++ b/Desbravadores-site/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='Aventura'
 DB_USER='aluno'
-DB_PASSWORD='sptech'
+DB_PASSWORD='12345'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
