--- a/Desbravadores-site/.env.dev
+++ b/Desbravadores-site/.env.dev
@@ -4,8 +4,8 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='Aventura'
 DB_USER='aluno'
-DB_PASSWORD='sptech'
-DB_PORT=3306
+DB_PASSWORD='SPTech#2024'
+DB_PORT=3307
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
